--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-p {
+h1{
+    color: red;
+    text-align: center;
+}
+
+p{
     color: green;
     text-align: center;
 }
@@ -17,12 +22,13 @@ p {
     color: pink;
 }
 
-tr{
-    text-align: center;
-}
 .center {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
 }
+
+.text-center {
+    text-align: center;
+  }
